[package]
name = "raspberry_pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_ws281x = "0.5.1"
spatial_led = "0.2"
rand = {version = "0.8.5", default-features = false, features = ["std", "std_rng"]}

[profile.release]
lto = true
opt-level = 3
codegen-units = 1